[package]
name = "serlib"
version = "0.1.0"
authors = ["Jason Alexander"]
edition = "2018"
license = "0BSD"
description = "A library for easy communication over serial ports in rust."
repository = "https://github.com/jasonalexander-ja/serlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
